--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.1.0
 anyio==4.4.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -24,6 +25,7 @@ fqdn==1.5.1
 gitdb==4.0.11
 GitPython==3.1.41
 h11==0.14.0
+h5py==3.11.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
@@ -31,6 +33,8 @@ ipykernel==6.29.5
 ipython==8.26.0
 ipywidgets==8.1.3
 isoduration==20.11.0
+jax==0.4.30
+jaxlib==0.4.30
 jedi==0.19.1
 Jinja2==3.1.4
 json5==0.9.25
@@ -49,11 +53,16 @@ jupyterlab==4.2.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.2
 jupyterlab_widgets==3.0.11
+keras==3.4.1
 kiwisolver==1.4.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==3.0.2
+ml-dtypes==0.4.0
+namex==0.0.8
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
@@ -61,6 +70,8 @@ nest-asyncio==1.6.0
 notebook==7.2.1
 notebook_shim==0.2.4
 numpy==2.0.0
+opt-einsum==3.3.0
+optree==0.12.1
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
@@ -78,6 +89,7 @@ pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
@@ -88,7 +100,9 @@ referencing==0.35.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
 rpds-py==0.19.0
+scipy==1.14.0
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==69.0.3
@@ -102,6 +116,7 @@ tinycss2==1.3.0
 tornado==6.4.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.2
